tests/snapshots/text_objects_test__caw_change_around_word.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 1

Buffer:
hello eart[h]test
