tests/snapshots/text_objects_test__ci_backtick.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
code `exampl[t]` here
