tests/snapshots/text_objects_test__ci_curly.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:8
Lines: 1

Buffer:
{ ol new[ ]d }
