tests/snapshots/text_objects_test__cip_change_paragraph.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:4
Lines: 5

Buffer:
old para
nten[t]
line 2

next
