tests/snapshots/text_objects_test__cis_change_sentence.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
New sentence[.]ld sentence. Next one.
