tests/snapshots/text_objects_test__d2iw_delete_two_words.snap
---
source: tests/text_objects_test.rs
expression: test.snapshot_state()
---
Mode: Insert
Cursor: 0:1
Lines: 1

Buffer:
w[o]ne two three four
